--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="Author" content="Joe Hans">
+        <title>My Site Title</title>
+        <link rel="stylesheet" href="style.css" type="css">
+    </head>
+    <body></body>
+</html>
